--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,10 +6,11 @@
         xmlns:local="clr-namespace:itsoutchyCord"
         xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Class="itsoutchyCord.MainWindow"
         mc:Ignorable="d"
-        Title="itsoutchyCord" Height="450" Width="800">
+        Title="itsoutchyCord" Height="450" Width="800" WindowState="Maximized">
     <Grid>
+        <!-- Margin="0,10,10,0" -->
+        <!--<Label Name="verNotif" Content="Version [N/A] is available!" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#FF404146" Foreground="White" Panel.ZIndex="1000" HorizontalContentAlignment="Right"/>-->
         <!--- Height="434" Width="800" -->
         <Wpf:WebView2 Name="webview" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Source="https://discord.com/app"/>
-
     </Grid>
 </Window>
