--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,10 +7,18 @@
         xmlns:Wpf="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" x:Class="itsoutchyCord.MainWindow"
         mc:Ignorable="d"
         Title="itsoutchyCord" Height="450" Width="800" WindowState="Maximized">
-    <Grid>
+    <DockPanel>
         <!-- Margin="0,10,10,0" -->
         <!--<Label Name="verNotif" Content="Version [N/A] is available!" HorizontalAlignment="Right" VerticalAlignment="Top" Background="#FF404146" Foreground="White" Panel.ZIndex="1000" HorizontalContentAlignment="Right"/>-->
         <!--- Height="434" Width="800" -->
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_Settings">
+                <MenuItem Header="Toggle Vencord" Name="configVencord"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="_Help">
+                <MenuItem Header="Github Repo" Name="openGithubRepo"></MenuItem>
+            </MenuItem>
+        </Menu>
         <Wpf:WebView2 Name="webview" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-    </Grid>
+    </DockPanel>
 </Window>
